Included buttons: "System reboot" and "System shutdown"

--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,8 @@
 
                 <div class="center">
                     <button id="configuration_save">Save configuration</button>
+                    <button id="system_reboot">System reboot</button>
+                    <button id="system_shutdown">System shutdown</button>
                 </div>
              </div>
 		</div>
@@ -92,6 +94,13 @@
 			</div>
 		</div>
 		
+		<div id="message-dialog" class="dialog">
+			<div class="dialog-content dialog-center">
+			<div class="dialog-spacer"></div>
+			<p id="message-dialog-text"></p>
+		</div>
+		</div>
+
 		<div id="error-dialog" class="dialog">
 			<div class="dialog-content dialog-center">
 				<p class="dialog-headline">
